--- a/Calculadora-Visual/styles/style.css
+++ b/Calculadora-Visual/styles/style.css
@@ -31,11 +31,11 @@ body {
     align-items: center;
 }
 
-.main-container label {
+.main-container input {
     width: 100%;
     height: 10%;
     padding: 10px 20px;
-    font-weight: bold;
+    font-weight: lighter;
     font-size: larger;
     color: rgb(73, 12, 130);
     border: 2px solid rgb(89, 12, 162);
@@ -63,7 +63,8 @@ body {
     gap: 20px;
 }
 
-.button-container input {
+.button-container input, 
+.history-container input {
     display: flex;
     height: 70px;
     width: 70px;
@@ -78,29 +79,41 @@ body {
     border-style: none;
 }
 
-.button-container input:hover {
+.history-container input {
+    height: 15%;
+    width: 100%;
+    font-weight: normal;
+    font-size: x-large;
+}
+
+.button-container input:hover,
+.history-container input:hover {
     background-color: rgb(140, 24, 249);
 }
 
 .history-container {
-    display: grid;
+    display: flex;
     width: 400px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5% 90%;
+    max-width: 400px;
     padding: 2%;
     color: rgb(73, 12, 130);
+    flex-direction: column;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: bold;
+    font-weight: normal;
     font-size: medium;
-    gap: 5%;
+    gap: 4%;
     border: 2px solid rgb(73, 12, 130);
     border-radius: 16px;
 }
 
+.history-container h2 {
+    font-weight: normal;
+    text-align: center;
+}
+
 .history-calc-container {
     display: flex;
-    height: 100%;
-    max-width: 348px;
+    height: 76%;
     width: 100%;
     padding: 20px;
     flex-direction: column;
@@ -111,4 +124,5 @@ body {
     background-color: rgb(237, 218, 255);
     border-radius: 16px;
     gap: 10px;
+    align-items: flex-start;
 }
