--- a/Sitio-Web/src/css/Style.css
+++ b/Sitio-Web/src/css/Style.css
@@ -33,7 +33,6 @@
 }
 */
 @import "tailwindcss";
-
 @plugin "daisyui" {
     themes: light --default;
     root: ":root";
@@ -113,6 +112,7 @@ nav {
     border-style: none;
     border-radius: var(--border-radius-50);
     cursor: pointer;
+    transition: transform 0.1s ease-in-out;
 }
 
 .search-bar-container-hidden {
@@ -369,9 +369,9 @@ nav {
 }
 li:hover .nav-link-sub-list {
     /*menú popup que aparece*/
+    display: flex;
     position: absolute;
     z-index: 100;
-    display: flex;
     flex-direction: column;
 }
 
